--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,10 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Практика Java. Разработка Web приложения.</title>
+    <meta http-equiv="refresh" content="0; url=resume"/>
+    <title>Web приложение</title>
 </head>
 <body>
-<h2>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
-    приложения."</a></h2>
+<p><a href="resume">Список резюме</a></p>
 </body>
 </html>
